<resources>
    <string name="app_name">Lesson2_month5</string>
    <string name="me">Me</string>
    <string name="you">You</string>
    <string name="calculate">calculate</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">result</string>
    <string name="percentage">percentage</string>
    <string name="try_again">Try again</string>
    <string name="todo">TODO</string>
    <string name="save_data">save data</string>
</resources>