<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/tvYou"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        android:textSize="18sp"/>

    <ImageView
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/pink"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvMe"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/tvResult"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/pink"/>

    <ImageView
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_favorite_border"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:tint="@color/pink"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/tvPercentage"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="-90dp"
        android:layout_gravity="center"
        android:text="@string/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/saveBtn"
        android:backgroundTint="@color/purple_500"
        android:background="@drawable/edt_bc"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:text="@string/save_data"
        android:paddingHorizontal="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</LinearLayout>