<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLoveCalculator"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:textColor="@color/purple_500"
        android:textStyle="italic"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstName"
        android:textColor="@color/purple_500"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoveCalculator" />

    <EditText
        android:padding="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:background="@drawable/edt_bc"
        android:id="@+id/edtFirstName"
        android:hint="@string/you"
        android:textColorHint="@color/purple_500"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName" />

    <TextView
        android:id="@+id/tvSecondName"
        android:textColor="@color/purple_500"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />


    <EditText
        android:textColorHint="@color/purple_500"
        android:padding="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:background="@drawable/edt_bc"
        android:id="@+id/edtSecondName"
        android:hint="@string/me"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondName" />

    <Button
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/purple_500"
        android:background="@drawable/edt_bc"
        android:id="@+id/btnRequest"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtSecondName"
        android:layout_marginHorizontal="80dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>